# dss-edge

./: .gitignore  .productionignore  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DUAL_STREAM_IMPLEMENTATION.md  INCIDENT_REPORT_DISK_USAGE.md  README.md  aiRequest_remote.js  ai_server.py  audit_server.js  b64_mon.txt  b64_pkg.txt  b64_svc.txt  build-production-package.sh  build_recorder.js  capture_errors.js  check_106.js  check_146.js  check_182.js  check_all_recordings.js  check_api_status.js  check_backups.js  check_cam1_data.js  check_cam_34b.js  check_camera_logs.js  check_cameras_remote.js  check_db.js  check_db_remote.js  check_delete_logs.js  check_exe.js  check_ffmpeg_errors.js  check_files.js  check_final_status.js  check_go2rtc_config.js  check_go2rtc_details.js  check_go2rtc_errors.js  check_go2rtc_local.js  check_go2rtc_logs.js  check_go2rtc_streams.js  check_html.js  (+232 more)
.gemini/: ANTIGRAVITY-SESSION-FINAL-REPORT.md  CHECKPOINT-EXEC-31.json  EXEC-24-SUMMARY.md  EXEC-25-PLAYBACK-PLAYER-IMPLEMENTATION.js  EXEC-26-DIAGNOSTIC.md  EXEC-27-UI-PLAYBACK-FIX.js  EXEC-30-GLOBAL-REGISTRY.md  (+3 more)
recorder/: AiDB.cpp  CMakeLists.txt  DEPRECATED_recorder.js.md  Decoder.cpp  IndexDB.cpp  PLAYBACK_README.md  PlaybackEngine.cpp  PlaybackEngineV2.cpp  PlaybackEngineV3.cpp  RingBuffer.hpp  Segmenter.cpp  WriterPool.cpp  cleanup.sh  dss-recorder.service  main.cpp  motionDetector.js  package.json  playback-engine.js  playback_server.cpp  recorder.js  recorder_remote.js
recorder/tests/: test-recorder-logic.js  test_recorder.js
recorder_deploy/recorder_cpp/: CMakeLists.txt  recorder.cpp
(+258 files in other folders)
